--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,6 @@ processResources {
 }
 
 task('deploy', dependsOn: jar, type: Copy) {
-    from jar into 'C:\\workspaces\\coderdojo\\mineserver\\plugins'
-
+    from jar into 'Y:\\plugins\\'
 }
 
